  and ClientStorage, returning a useful value in more cases.

- Oracle: Add support for getting the database size. Contributed in
  `PR 21`_ by Mauro Amico.

- Oracle: Packing should no longer produce LOB errors. This partially
  reverts the speedups in 1.6.0b2. Reported in `issue 30`_ by Peter
  Jacobs.

- PostgreSQL: ``zodbconvert --clear`` should be much faster when the
  destination is a PostgreSQL schema containing lots of data. Partial
  fix for `issue 16`_ reported by Chris McDonough.

.. _`PR 18`: https://github.com/zodb/relstorage/pull/18/
.. _`PR 20`: https://github.com/zodb/relstorage/pull/20
.. _`PR 21`: https://github.com/zodb/relstorage/pull/21
.. _`issue 30`: https://github.com/zodb/relstorage/issues/30
.. _`issue 16`: https://github.com/zodb/relstorage/issues/16
.. _`PR 22`: https://github.com/zodb/relstorage/pull/22
.. _`PR 23`: https://github.com/zodb/relstorage/pull/23/

1.6.0b3 (2014-12-08)
--------------------

- Packing: Significantly reduced the RAM consumed by graph traversal during
  the pre_pack phase.  (Tried several methods; encoded 64 bit IISets turned
  out to be the most optimal.)

1.6.0b2 (2014-10-03)
--------------------

- Packing: Used cursor.fetchmany() to make packing more efficient.

1.6.0b1 (2014-09-04)
--------------------

- The local cache is now more configurable and uses ``zlib`` compression
  by default.

- Added support for ``zodburi``, which means you can open a storage
  using "postgres:", "mysql:", or "oracle:" URIs.

- Packing: Reduced RAM consumption while packing by using IIBTree.Set
  instead of built-in set objects.

- MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.

- Added performance metrics using the perfmetrics package.

- zodbconvert: Add an --incremental option to the zodbconvert script,
  letting you convert additional transactions at a later date, or
  update a non-live copy of your database, copying over missing
  transactions.
