@@ -698,7 +698,7 @@ class GenericRelStorageTests(
         # on whether the accelerated implementation is in use. Also ,the pure-python
         # version on PyPy can raise IndexError
         from zodbpickle.pickle import UnpicklingError as pUnpickErr
-        unpick_errs = (pUnpickErr,IndexError)
+        unpick_errs = (pUnpickErr, IndexError)
         try:
             from zodbpickle.fastpickle import UnpicklingError as fUnpickErr
         except ImportError:
@@ -709,7 +709,7 @@ class GenericRelStorageTests(
 
         self._dostoreNP(self._storage.new_oid(), data=b'brokenpickle')
         self.assertRaises(unpick_errs, self._storage.pack,
-            time.time() + 10000, referencesf)
+                          time.time() + 10000, referencesf)
 
     def checkBackwardTimeTravelWithoutRevertWhenStale(self):
         # If revert_when_stale is false (the default), when the database
@@ -743,7 +743,7 @@ class GenericRelStorageTests(
                 transaction.commit()
                 self.assertTrue('beta' in r)
 
-                c._storage.zap_all(reset_oid=False)
+                c._storage.zap_all(reset_oid=False, slow=True)
                 c._storage.copyTransactionsFrom(fs)
 
                 fs.close()
@@ -794,7 +794,7 @@ class GenericRelStorageTests(
                 transaction.commit()
                 self.assertTrue('beta' in r)
 
-                c._storage.zap_all(reset_oid=False)
+                c._storage.zap_all(reset_oid=False, slow=True)
                 c._storage.copyTransactionsFrom(fs)
 
                 fs.close()
