@@ -44,8 +44,12 @@
   Jacobs.
 
 - PostgreSQL: ``zodbconvert --clear`` should be much faster when the
-  destination is a PostgreSQL schema containing lots of data. Partial
-  fix for `issue 16`_ reported by Chris McDonough.
+  destination is a PostgreSQL schema containing lots of data. *NOTE*:
+  There can be no other open RelStorage connections to the destination,
+  or any PostgreSQL connection in general that might be holding locks
+  on the RelStorage tables, or ``zodbconvert`` will block indefinitely
+  waiting for the locks to be release. Partial fix for `issue 16`_
+  reported by Chris McDonough.
 
 .. _`PR 18`: https://github.com/zodb/relstorage/pull/18/
 .. _`PR 20`: https://github.com/zodb/relstorage/pull/20
